@@ -1,0 +1,8 @@
+<!DOCTYPE HTML>
+<html lang="en">
+    <title>Test Case for text-align: start/end</title>
+    <p dir="ltr" style="text-align:start">LTR Start
+    <p dir="ltr" style="text-align:end">LTR End
+    <p dir="rtl" style="text-align:start">RTL Start
+    <p dir="rtl" style="text-align:end">RTL End
+</html>
